Fix about image view on mobile

--- a/styles.css
+++ b/styles.css
@@ -707,7 +707,7 @@ footer {
 
 .about-main {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   width: calc(100% - calc(3rem + 2vw));
   gap: 2rem;
 }
@@ -723,6 +723,12 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+}
+
+@media (max-width: 1050px) {
+  .about-main {
+    grid-template-columns: 1fr;
+  }
 }
 
 .about-h2:not(:first-child) {
